<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <ImageView
        android:id="@+id/imageRegister"
        android:layout_width="384dp"
        android:layout_height="225dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="258dp"
        android:contentDescription="@string/contentDescription4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_register" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="250dp"
        android:layout_height="82dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:cursorVisible="false"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:hint="@string/hint_register"
        android:inputType="textPersonName"
        android:maxLength="9"
        android:rotation="-2"
        android:textAlignment="center"
        android:textSize="40sp"

        app:layout_constraintBottom_toBottomOf="@+id/imageRegister"
        app:layout_constraintEnd_toEndOf="@+id/imageRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageRegister" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="68dp"
        android:layout_height="73dp"
        android:layout_marginStart="310dp"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/btn_register"
        android:contentDescription="@string/btn_cancel2"
        app:backgroundTint="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/imageRegister"
        app:layout_constraintTop_toTopOf="@+id/imageRegister" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="117dp"
        android:layout_height="72dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_register"
        app:backgroundTint="@color/black"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_confirm"
        app:layout_constraintBottom_toBottomOf="@+id/imageRegister"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel2"
        android:layout_width="122dp"
        android:layout_height="64dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_register"
        app:backgroundTint="@color/black"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/imageRegister"
        app:layout_constraintStart_toStartOf="@+id/imageRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>