<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stage1">

    <TextView
        android:id="@+id/stage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/stage_title2"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRestart" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="95dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/back"
        android:contentDescription="@string/btn_cancel"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnHint"
        android:layout_width="86dp"
        android:layout_height="63dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/hint"
        android:contentDescription="hint"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hint" />

    <ImageButton
        android:id="@+id/btnRestart"
        android:layout_width="96dp"
        android:layout_height="73dp"
        android:background="@drawable/restart"
        android:contentDescription="@string/Restart"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/btnHint"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restart" />

    <TextView
        android:id="@+id/false1"
        android:layout_width="83dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="76dp"
        android:text="@string/S2_I1"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/false2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title" />

    <TextView
        android:id="@+id/real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/S2_I2"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title" />

    <TextView
        android:id="@+id/false2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/S2_I3"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title" />


</androidx.constraintlayout.widget.ConstraintLayout>