<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stage1">

    <TextView
        android:id="@+id/stage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/stage_title4"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRestart" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:contentDescription="@string/btn_cancel"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnHint"
        android:layout_width="95dp"
        android:layout_height="72dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/hint"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hint"
        android:contentDescription="hint"/>

    <ImageButton
        android:id="@+id/btnRestart"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:background="@drawable/restart"
        android:contentDescription="@string/Restart"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/btnHint"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restart" />

    <ImageView
        android:id="@+id/egg"
        android:layout_width="215dp"
        android:layout_height="276dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title"
        app:srcCompat="@drawable/egg"
        android:scaleType="fitXY"/>


</androidx.constraintlayout.widget.ConstraintLayout>