<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stage1">

    <TextView
        android:id="@+id/stage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal"
        android:text="@string/stage_title3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRestart" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back"
        android:contentDescription="@string/btn_cancel"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="108dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnHint"
        android:layout_width="89dp"
        android:layout_height="61dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/hint"
        android:contentDescription="hint"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hint" />

    <ImageButton
        android:id="@+id/btnRestart"
        android:layout_width="81dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/restart"
        android:contentDescription="@string/Restart"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/btnHint"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restart" />

    <Button
        android:id="@+id/win"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="2dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerEdit" />

    <EditText
        android:id="@+id/answerEdit"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/S3_default"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple1" />

    <ImageView
        android:id="@+id/apple1"
        android:layout_width="68dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple2"
        android:layout_width="74dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title"
        app:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/apple"
        android:layout_width="51dp"
        android:layout_height="88dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stage_title"
        app:srcCompat="@drawable/apple" />


</androidx.constraintlayout.widget.ConstraintLayout>